--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -23,6 +23,6 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
             - name: install
-              run: yarn lint
+              run: yarn install --frozen-lockfile
             - name: build
               run: yarn build
