--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "build": "turbo run build",
         "dev": "turbo run dev --parallel",
         "lint": "turbo run lint",
-        "format": "prettier --write \"**/*.{ts,tsx,md}\""
+        "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.14.0",
@@ -24,7 +25,12 @@
         "eslint": "^8.10.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
+        "husky": ">=6",
+        "lint-staged": ">=10",
         "prettier": "^2.5.1",
         "turbo": "latest"
+    },
+    "lint-staged": {
+        "*.js": "eslint --cache --fix"
     }
 }
