--- a/packages/collector/package.json
+++ b/packages/collector/package.json
@@ -50,6 +50,7 @@
         "@typescript-eslint/eslint-plugin": "^5.14.0",
         "@typescript-eslint/parser": "^5.14.0",
         "babel-loader": "^8.1.0",
+        "config": "*",
         "cross-env": "^7.0.3",
         "cz-conventional-changelog": "3.3.0",
         "eslint": "^8.10.0",
@@ -61,6 +62,7 @@
         "jest": "^27.0.4",
         "prettier": "^2.5.1",
         "standard-version": "^9.3.2",
+        "tsconfig": "*",
         "ts-jest": "^27.0.2",
         "ts-loader": "^9.1.1",
         "typescript": "^4.0.3",
