--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@adobe/commerce-events-sdk",
+    "name": "@grahamcrackers/commerce-events-sdk",
     "version": "1.1.11",
     "description": "SDK for working with events on an Adobe Commerce storefront",
     "main": "./dist/index.js",
@@ -42,6 +42,7 @@
         "@testing-library/dom": "^7.31.2",
         "@types/jest": "^26.0.23",
         "babel-loader": "^8.1.0",
+        "config": "*",
         "cross-env": "^7.0.3",
         "cz-conventional-changelog": "3.3.0",
         "eslint": "^7.9.0",
@@ -52,6 +53,7 @@
         "jest": "^26.6.3",
         "sass-loader": "^11.0.1",
         "standard-version": "^9.1.0",
+        "tsconfig": "*",
         "ts-jest": "^26.5.6",
         "ts-loader": "^9.1.2",
         "typescript": "^4.0.3",
