--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -16,7 +16,7 @@
     },
     "devDependencies": {
         "config": "*",
-        "eslint": "7.32.0",
+        "eslint": "^8.12.0",
         "next-transpile-modules": "9.0.0",
         "tsconfig": "*",
         "@types/node": "^17.0.12",
