:wrench: prettier, husky, lint-staged
configure lint staged

add husky command back and test files

format files with prettier rules

--- a/turbo.json
+++ b/turbo.json
@@ -1,20 +1,19 @@
 {
     "pipeline": {
         "build": {
-            "dependsOn": [
-                "^build"
-            ],
-            "outputs": [
-                "dist/**",
-                ".next/**"
-            ]
+            "dependsOn": ["^build"],
+            "outputs": ["dist/**", ".next/**"]
         },
+        "test": {},
         "lint": {
+            "outputs": []
+        },
+        "lint:fix": {
             "outputs": []
         },
         "start": {
             "cache": false
-        }, 
+        },
         "dev": {
             "cache": false
         }
