--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "start": "turbo run start --parallel --continue",
         "build": "turbo run build",
         "dev": "turbo run dev --parallel",
+        "test": "turbo run test",
         "lint": "turbo run lint",
+        "lint:fix": "turbo run lint:fix",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
         "prepare": "husky install"
     },
@@ -26,6 +28,12 @@
         "turbo": "latest"
     },
     "lint-staged": {
-        "*.js": "eslint --cache --fix"
+        "apps/**/*.{js,jsx,ts,tsx}": [
+            "eslint --fix"
+        ],
+        "package/**/*.s": [
+            "eslint --fix"
+        ],
+        "*.json": "prettier --write"
     }
 }
