--- a/packages/collector/package.json
+++ b/packages/collector/package.json
@@ -18,9 +18,9 @@
         "lint:fix": "eslint --fix .",
         "format": "prettier --check \"./**/*.{ts,tsx,js,css,json,md}\"",
         "format:fix": "prettier --write  \"./**/*.{ts,tsx,js,css,json,md}\"",
-        "test": "jest --passWithNoTests",
-        "test:ci": "jest --passWithNoTests --ci",
-        "test:watch": "jest --passWithNoTests --watch",
+        "test": "jest --coverage",
+        "test:ci": "jest --ci",
+        "test:watch": "jest --watch",
         "release": "cross-env HUSKY_SKIP_HOOKS=1 standard-version"
     },
     "repository": {
@@ -40,28 +40,23 @@
     "dependencies": {
         "@adobe/adobe-client-data-layer": "^2.0.2",
         "@adobe/alloy": "^2.7.0",
+        "@babel/preset-env": "^7.16.11",
         "@snowplow/browser-plugin-link-click-tracking": "^3.0.2",
         "@snowplow/browser-plugin-performance-timing": "^3.0.1",
-        "@snowplow/browser-tracker": "^3.0.1"
+        "@snowplow/browser-tracker": "^3.0.1",
+        "typescript": "^4.6.3"
     },
     "devDependencies": {
         "@adobe/magento-storefront-events-sdk": "^1.1.11",
-        "@types/jest": "^26.0.23",
-        "@typescript-eslint/eslint-plugin": "^5.14.0",
-        "@typescript-eslint/parser": "^5.14.0",
-        "babel-loader": "^8.1.0",
         "config": "*",
         "cross-env": "^7.0.3",
         "cz-conventional-changelog": "3.3.0",
         "eslint": "^8.12.0",
         "html-webpack-plugin": "^5.3.1",
-        "husky": "^4.3.8",
-        "jest": "^27.0.4",
-        "prettier": "^2.5.1",
         "standard-version": "^9.3.2",
-        "tsconfig": "*",
-        "ts-jest": "^27.0.2",
+        "ts-jest": "^27.1.4",
         "ts-loader": "^9.1.1",
+        "tsconfig": "*",
         "typescript": "^4.0.3",
         "webpack": "^5.26.0",
         "webpack-cli": "^4.5.0",
