--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -39,21 +39,14 @@
     "homepage": "https://github.com/adobe/magento-storefront-events-sdk#readme",
     "devDependencies": {
         "@adobe/adobe-client-data-layer": "^2.0.2",
-        "@testing-library/dom": "^7.31.2",
-        "@types/jest": "^26.0.23",
-        "babel-loader": "^8.1.0",
         "config": "*",
         "cross-env": "^7.0.3",
         "cz-conventional-changelog": "3.3.0",
         "eslint": "^8.12.0",
         "html-webpack-plugin": "^5.3.1",
-        "husky": "^4.3.8",
-        "jest": "^26.6.3",
-        "sass-loader": "^11.0.1",
         "standard-version": "^9.1.0",
-        "tsconfig": "*",
-        "ts-jest": "^26.5.6",
         "ts-loader": "^9.1.2",
+        "tsconfig": "*",
         "typescript": "^4.0.3",
         "webpack": "^5.26.2",
         "webpack-cli": "^4.5.0",
@@ -64,5 +57,8 @@
         "hooks": {
             "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
         }
+    },
+    "dependencies": {
+        "typescript": "^4.6.3"
     }
 }
