--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,7 +22,7 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: ${{ matrix.node-version }}
-            - name: install
+            - name: install dependencies
               run: yarn install --frozen-lockfile
-            - name: build
-              run: yarn build
+            - run: yarn build
+            - run: yarn test
