--- a/packages/collector/package.json
+++ b/packages/collector/package.json
@@ -40,11 +40,9 @@
     "dependencies": {
         "@adobe/adobe-client-data-layer": "^2.0.2",
         "@adobe/alloy": "^2.7.0",
-        "@babel/preset-env": "^7.16.11",
         "@snowplow/browser-plugin-link-click-tracking": "^3.0.2",
         "@snowplow/browser-plugin-performance-timing": "^3.0.1",
-        "@snowplow/browser-tracker": "^3.0.1",
-        "typescript": "^4.6.3"
+        "@snowplow/browser-tracker": "^3.0.1"
     },
     "devDependencies": {
         "@adobe/magento-storefront-events-sdk": "^1.1.11",
@@ -57,15 +55,10 @@
         "ts-jest": "^27.1.4",
         "ts-loader": "^9.1.1",
         "tsconfig": "*",
-        "typescript": "^4.0.3",
+        "typescript": "^4.6.3",
         "webpack": "^5.26.0",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^4.0.0-beta.0",
         "webpack-merge": "^5.7.3"
-    },
-    "husky": {
-        "hooks": {
-            "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
-        }
     }
 }
