--- a/packages/collector/tsconfig.json
+++ b/packages/collector/tsconfig.json
@@ -3,8 +3,8 @@
     "compilerOptions": {
         "baseUrl": ".",
         "outDir": "dist",
-        "declarationDir": "dist/types",
+        "declarationDir": "dist/types"
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist", ".turbo"]
+    "exclude": ["node_modules", "dist", ".turbo", "coverage"]
 }
