--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -8,6 +8,20 @@
     "files": [
         "dist/"
     ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/adobe/magento-storefront-events-sdk"
+    },
+    "keywords": [],
+    "author": {
+        "name": "Adobe",
+        "url": "https://www.adobe.com/"
+    },
+    "license": "SEE LICENSE IN LICENSE",
+    "bugs": {
+        "url": "https://github.com/adobe/magento-storefront-events-sdk/issues"
+    },
+    "homepage": "https://github.com/adobe/magento-storefront-events-sdk#readme",
     "scripts": {
         "start": "webpack serve --config webpack.dev.js",
         "build": "webpack --config webpack.prod.js",
@@ -23,20 +37,7 @@
         "test:watch": "jest --watch",
         "release": "cross-env HUSKY_SKIP_HOOKS=1 standard-version"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/adobe/magento-storefront-events-sdk"
-    },
-    "keywords": [],
-    "author": {
-        "name": "Adobe",
-        "url": "https://www.adobe.com/"
-    },
-    "license": "SEE LICENSE IN LICENSE",
-    "bugs": {
-        "url": "https://github.com/adobe/magento-storefront-events-sdk/issues"
-    },
-    "homepage": "https://github.com/adobe/magento-storefront-events-sdk#readme",
+    "dependencies": {},
     "devDependencies": {
         "@adobe/adobe-client-data-layer": "^2.0.2",
         "config": "*",
@@ -47,18 +48,10 @@
         "standard-version": "^9.1.0",
         "ts-loader": "^9.1.2",
         "tsconfig": "*",
-        "typescript": "^4.0.3",
+        "typescript": "^4.6.3",
         "webpack": "^5.26.2",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^4.0.0-beta.0",
         "webpack-merge": "^5.7.3"
-    },
-    "husky": {
-        "hooks": {
-            "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
-        }
-    },
-    "dependencies": {
-        "typescript": "^4.6.3"
     }
 }
