--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@grahamcrackers/commerce-events-sdk",
-    "version": "1.1.11",
+    "version": "2.0.0-beta.0",
     "description": "SDK for working with events on an Adobe Commerce storefront",
     "main": "./dist/index.js",
     "module": "./dist/index.js",
