--- a/.github/workflows/publish-latest.yml
+++ b/.github/workflows/publish-latest.yml
@@ -31,6 +31,6 @@ jobs:
               run: yarn build
             - name: publish
               working-directory: ./packages/sdk
-              run: yarn publish
+              run: yarn publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
