--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,12 +17,7 @@
             "name": "Debug Jest Tests",
             "type": "node",
             "request": "launch",
-            "runtimeArgs": [
-                "--inspect-brk",
-                "${workspaceRoot}/node_modules/.bin/jest",
-                "--runInBand",
-                "--watch"
-            ],
+            "runtimeArgs": ["--inspect-brk", "${workspaceRoot}/node_modules/.bin/jest", "--runInBand", "--watch"],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "port": 9229
