:construction_worker:  cache node_modules

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,6 +18,13 @@ jobs:
               with:
                   fetch-depth: 0
                   ref: ${{ github.ref }}
+
+            - name: cache
+              uses: actions/cache@v2
+              with:
+                  path: '**/node_modules'
+                  key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+
             - name: node ${{ matrix.node-version }}
               uses: actions/setup-node@v2
               with:
