--- a/.github/workflows/publish-collector.yml
+++ b/.github/workflows/publish-collector.yml
@@ -21,6 +21,13 @@ jobs:
               with:
                   fetch-depth: 0
                   ref: ${{ github.ref }}
+
+            - name: cache
+              uses: actions/cache@v2
+              with:
+                  path: '**/node_modules'
+                  key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+                  
             - name: node
               uses: actions/setup-node@v2
               with:
